--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,3 +101,7 @@ bInitServerOnClient=true
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate = 60
+
+
