--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [SectionsToSave]
 +Section=StartupActions
 
-[/Screipt/Engine.GameSession]
+[/Script/Engine.GameSession]
 MaxPlayers=100
 
 [/Script/UnrealEd.ProjectPackagingSettings]
